<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lightmode"
    android:layout_width="match_parent"
    android:visibility="visible"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.50" />

    <LinearLayout
        android:id="@+id/LinearLayoutOfTexts"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <Switch
            android:id="@+id/switchNightMode"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:onClick="onClickTurnOnNightMode"
            android:textColor="@color/colorBlack"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:checked="false"
            android:text="@string/night_mode"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textViewValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@android:color/black"
            android:textAlignment="textEnd"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/textViewResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textAlignment="textEnd"
            android:textSize="40sp" />

    </LinearLayout>

    <TableLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LinearLayoutOfTexts">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="#0288d1"
            android:layout_weight="1">

            <Button
                android:id="@+id/buttonSubtract"
                style="@style/ButtonStyle"
                android:layout_weight="1"
                android:background="#0288d1"
                android:text="@string/subtract" />

            <Button
                android:id="@+id/buttonMultiply"
                style="@style/ButtonStyle"
                android:layout_weight="1"
                android:background="#0288d1"
                android:text="@string/multiply" />

            <Button
                android:id="@+id/buttonAdd"
                style="@style/ButtonStyle"
                android:layout_weight="1"
                android:background="#0288d1"
                android:text="@string/add" />

            <Button
                android:id="@+id/buttonDivide"
                style="@style/ButtonStyle"
                android:layout_weight="1"
                android:background="#0288d1"
                android:text="@string/divide" />

            <Button
                android:id="@+id/buttonDel"
                style="@style/ButtonStyle"
                android:layout_weight="1"
                android:background="#0288d1"
                android:text="@string/del" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/buttonNumberSeven"
                style="@style/ButtonStyle"
                android:text="@string/_7" />

            <Button
                android:id="@+id/buttonNumberEight"
                style="@style/ButtonStyle"
                android:text="@string/_8" />

            <Button
                android:id="@+id/buttonNumberNine"
                style="@style/ButtonStyle"
                android:text="@string/_9" />

            <Button
                android:id="@+id/buttonNumberZero"
                style="@style/ButtonStyle"
                android:text="@string/_0" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <Button
                android:id="@+id/buttonNumberFour"
                style="@style/ButtonStyle"
                android:text="@string/_4" />

            <Button
                android:id="@+id/buttonNumberFive"
                style="@style/ButtonStyle"
                android:text="@string/_5" />

            <Button
                android:id="@+id/buttonNumberSix"
                style="@style/ButtonStyle"
                android:text="@string/_6" />

            <Button
                android:id="@+id/buttonDot"
                style="@style/ButtonStyle"
                android:text="@string/dot" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/buttonNumberOne"
                style="@style/ButtonStyle"
                android:text="@string/_1" />

            <Button
                android:id="@+id/buttonNumberTwo"
                style="@style/ButtonStyle"
                android:text="@string/_2" />

            <Button
                android:id="@+id/buttonNumberThree"
                style="@style/ButtonStyle"
                android:text="@string/_3" />

            <Button
                android:id="@+id/buttonEqual"
                style="@style/ButtonStyle"
                android:textSize="50sp"
                android:background="@color/colorAccent"
                android:text="@string/equal" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
