<resources>
    <string name="app_name">Calculator</string>
    <string name="night_mode">Switch Color Theme</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="dot">.</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_0">0</string>
    <string name="divide">÷</string>
    <string name="multiply">×</string>
    <string name="subtract">-</string>
    <string name="equal">=</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="add">+</string>
    <string name="backspace">Backspace</string>
    <string name="del">DEL</string>
    <string name="wrong_expression">Неверное выражение!</string>
    <string name="deleteAll">Очищено</string>
    <string name="operator_already_exists">Уже выставлен оператор вычисления!</string>
    <string name="dot_already_exists">Невозможно поставить точку</string>
    <string name="limit_of_numbers">Превышен лимит цифр!</string>
</resources>
